--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@icon-park/react": "^1.3.5",
+    "@mantine/core": "^4.2.5",
+    "@mantine/hooks": "^4.2.5",
     "gatsby": "^4.14.0",
     "gatsby-plugin-gatsby-cloud": "^4.14.0",
     "gatsby-plugin-image": "^2.14.1",
     "gatsby-plugin-manifest": "^4.14.0",
+    "gatsby-plugin-mantine": "^4.0.0",
     "gatsby-plugin-offline": "^5.14.0",
     "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-sass": "^5.14.0",
     "gatsby-plugin-sharp": "^4.14.1",
     "gatsby-source-filesystem": "^4.14.0",
     "gatsby-transformer-sharp": "^4.14.0",
+    "node-sass": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
