--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sass": "^5.14.0",
     "gatsby-plugin-sharp": "^4.14.1",
     "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-transformer-remark": "^5.14.0",
     "gatsby-transformer-sharp": "^4.14.0",
     "node-sass": "^6.0.1",
     "prop-types": "^15.8.1",
