--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@icon-park/react": "^1.3.5",
     "@mantine/core": "^4.2.5",
     "@mantine/hooks": "^4.2.5",
+    "antd": "^4.21.0",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.7",
     "gatsby": "^4.14.0",
