--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gatsby-plugin-react-helmet": "^5.14.0",
     "gatsby-plugin-sass": "^5.14.0",
     "gatsby-plugin-sharp": "^4.14.1",
+    "gatsby-remark-autolink-headers": "^5.16.0",
+    "gatsby-remark-table-of-contents": "^2.0.0",
     "gatsby-source-filesystem": "^4.14.0",
     "gatsby-transformer-json": "^4.15.0",
     "gatsby-transformer-remark": "^5.14.0",
